changes for #4: fixed code block overflow added code highlight

--- a/theme/static/styles/main.scss
+++ b/theme/static/styles/main.scss
@@ -114,3 +114,11 @@ footer {
   margin: auto;
   text-align: center;
 }
+
+div.highlight {
+  padding: 0 10px;
+  overflow-x: auto;
+  background-color: #202020;
+}
+
+@import './highlight.css';
